<resources>
    <string name="app_name">MyCafeApp</string>

    <string name="SignUp">Регистрация</string>
    <string name="SignIn">Вход</string>

    <string name="Name">Name</string>
    <string name="Email">Email@gmail.com</string>
    <string name="Password">Password</string>
    <string name="Phone">Phone</string>

    <string name="Create">Создать</string>

    <string name="Menu_FragmentOne">Профиль</string>
    <string name="Menu_FragmentTwo">Пицца</string>

    <string name="PizzaPrice">Цена за одну пиццу:</string>
    <string name="FullPrice">Общая цена:</string>
    <string name="AddInCard">Добавить в корзину</string>

    <string name="Cart">Корзина</string>
    <string name="Exit">Выйти</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="nd_menu">Меню</string>
    <string name="nd_cart">Корзина</string>
    <string name="nd_history">Історія</string>
    <string name="nd_map">Місцезнаходження</string>
    <string name="nd_send">Відгук</string>

    <string name="totalPrice">Загальна ціна</string>
    <string name="MakeAnOrder">Зробити замовлення</string>

    <string name="Vul">Вулиця</string>
    <string name="Byd">будинок</string>
    <string name="Kv">квартира</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ndmenu">NDMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_api">AIzaSyDpx6jBoKx2dnd0trPrnHhzrBSh4LFcR_Y</string>
    <string name="title_activity_maps">Map</string>

    <string name="Send">Надіслати відгук</string>

</resources>
