<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_nav_menu_1"
            android:icon="@drawable/ndmenu"
            android:checked="true"
            android:title="@string/nd_menu" />

        <item
            android:id="@+id/id_nav_menu_2"
            android:icon="@drawable/ndcart"
            android:title="@string/nd_cart" />

        <item
            android:id="@+id/id_nav_menu_3"
            android:icon="@drawable/ndhistory"
            android:title="@string/nd_history" />

        <item
            android:id="@+id/id_nav_menu_4"
            android:icon="@drawable/ndgooglemaps"
            android:title="@string/nd_map"/>

        <item
            android:id="@+id/id_nav_menu_5"
            android:icon="@drawable/ndsend"
            android:title="@string/nd_send"/>

    </group>
</menu>