<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mainlogo"
    tools:context=".SignIn">

    <LinearLayout
        android:id="@+id/id_signin_linearlayout"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/Black"
            android:text="@string/Phone"
            android:background="#14ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/Black"
            android:text="+380994738248"
            android:id="@+id/id_signin_phone"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:background="#14ffffff"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/Black"
            android:text="@string/Password"
            android:background="#14ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/Black"
            android:text="123456"
            android:id="@+id/id_signin_password"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:background="#14ffffff"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:gravity="center"
            android:id="@+id/id_signin_signin"
            android:text="@string/SignIn"
            android:background="@drawable/id_main_signin"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>